--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -95,6 +95,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.SCharacter.cameraComp",NewName="/Script/ActionRoguelike.SCharacter.CameraComp")
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.SCharacter.ProjectileClass",NewName="/Script/ActionRoguelike.SCharacter.PrimaryProjectileClass")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.SPotionBase",NewName="/Script/ActionRoguelike.SPowerupActor")
++FunctionRedirects=(OldName="/Script/ActionRoguelike.SGameModeBase.OnQueryCompleted",NewName="/Script/ActionRoguelike.SGameModeBase.OnSpawnBotQueryCompleted")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
