--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -96,6 +96,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.SCharacter.ProjectileClass",NewName="/Script/ActionRoguelike.SCharacter.PrimaryProjectileClass")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.SPotionBase",NewName="/Script/ActionRoguelike.SPowerupActor")
 +FunctionRedirects=(OldName="/Script/ActionRoguelike.SGameModeBase.OnQueryCompleted",NewName="/Script/ActionRoguelike.SGameModeBase.OnSpawnBotQueryCompleted")
++PropertyRedirects=(OldName="/Script/ActionRoguelike.SAction_ProjectileAttack.CastSpellEffect",NewName="/Script/ActionRoguelike.SAction_ProjectileAttack.CastingEffect")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
