--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -84,6 +84,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PrimaryAttack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="PrimaryInteract",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Parry",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +AxisMappings=(AxisName="Look Up / Down Gamepad",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="Look Up / Down Mouse",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="Lookup",Scale=-1.000000,Key=MouseY)
