Assignment 5 Review -- Done

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,6 +97,9 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ActionRoguelike.SPotionBase",NewName="/Script/ActionRoguelike.SPowerupActor")
 +FunctionRedirects=(OldName="/Script/ActionRoguelike.SGameModeBase.OnQueryCompleted",NewName="/Script/ActionRoguelike.SGameModeBase.OnSpawnBotQueryCompleted")
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.SAction_ProjectileAttack.CastSpellEffect",NewName="/Script/ActionRoguelike.SAction_ProjectileAttack.CastingEffect")
++PropertyRedirects=(OldName="/Script/ActionRoguelike.SGameModeBase.CoinMaxAmount",NewName="/Script/ActionRoguelike.SGameModeBase.DesiredPowerupCount")
++FunctionRedirects=(OldName="/Script/ActionRoguelike.SGameModeBase.OnSpawnCoinQueryCompleted",NewName="/Script/ActionRoguelike.SGameModeBase.OnSpawnPowerupsQueryCompleted")
++PropertyRedirects=(OldName="/Script/ActionRoguelike.SGameModeBase.SpawnCoinQuery",NewName="/Script/ActionRoguelike.SGameModeBase.SpawnPowerupsQuery")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
