--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ActionRoguelike/Maps/MyLevel.MyLevel
+GameDefaultMap=/Game/ActionRoguelike/Maps/MainMenu_Entry.MainMenu_Entry
 EditorStartupMap=/Game/ActionRoguelike/Maps/MyLevel.MyLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
